# lingji-zero

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  MIGRATION.md  Makefile  NOTICE  OPEN_SOURCE_RELEASE.md  README.md  README_zh.md  SECURITY.md  docker-compose.yml
lingji-agent/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
lingji-agent/.gaps/: INDEX.md  phase-00.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md
lingji-agent/config/: default_config.laptop.yaml.example  default_config.yaml.example
lingji-agent/docs/: fleet-4.0-job-workflow.md  fleet-4.0d-1-deploy-空城记与青铜剑.md  fleet-4.0d-remote-guardian-design.md  fleet-4.0d-remote-guardian-runbook.md  fleet-phase2-inbox.md  fleet-phase3-transfer.md  gateway-deploy-fleet2-hermes.md  gateway-deploy-fleet3-hermes.md  laptop-deploy-hermes.md  laptop-fleet-1.5-acceptance-hermes.md  laptop-fleet-3.1-display-name-via-agent.md
lingji-agent/scripts/: expire_pending_hitl.py
lingji-agent/tests/: conftest.py  e2e_verify.py  integration_test.py  test_activity_indicator.py  test_chaos_ws.py  test_chat_sessions.py  test_config.py  test_custom_tool_example.py  test_db.py  test_file_tools.py  test_file_transfer.py  test_fleet_tools.py  test_guardrails.py  test_hitl.py  test_hitl_recovery.py  test_hitl_recovery_expiry.py  test_incoming_files.py  test_job_tools.py  test_llm_provider.py  test_memory.py  test_memory_decay.py  test_memory_summarize.py  test_observability.py  test_orchestrator.py  test_orchestrator_attachments.py  (+18 more)
(+152 files in other folders)
