[project]
name = "lingji-agent"
version = "0.1.0"
description = "LingjiPlan: Local-first AI Agent"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "httpx>=0.27",
    "openai>=1.0",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
    "aiosqlite>=0.20",
    "langchain-core>=1.0",
    "langchain-openai>=1.0",
    "psutil>=5.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "anyio>=4.0",
    "chromadb>=0.5,<1.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "prometheus_client>=0.21",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
collect_ignore = ["tests/integration_test.py"]
